--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndoirdTeam3.3</string>
+    <string name="matin">Integer11. Uch xonali son berilgan. Uning raqamlar yig\'indisini aniqlovchi programma tuzilsin.</string>
 </resources>
